--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "watch": "node --watch app.js",
+    "initdb": "node db/populatedb.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "pg": "^8.13.1"
   }
 }
